# periodo-website

./: .gitignore  .gitmodules  .tool-versions  .travis.yml  2016-workshop.md  2017-workshop.md  CNAME  Makefile  README.md  change-policy.md  chicago-author-date.csl  circle.yml  contact.md  contributors.md  data-model.md  deploy-key.enc  index.html  license.md  motivacion.md  motivation.md  narrative.md  periodo-github-io.cabal  periodo-website.cabal  publications.md  refs.bib  resumen-tecnico.md  safari-is-broken.md  site.hs  specs.md  stack.yaml  technical-overview.md
2016-workshop/: index.html
2017-workshop/: index.html
README/: index.html
change-policy/: index.html
contact/: index.html
contributors/: index.html
css/: default.css  lib.css  style.css
data-model/: index.html
en/: index.html
es/: index.html
guide/: 1-browse-the-canonical-dataset.md  1-open-and-browse.md  1-open-the-canonical-dataset.md  2-find-and-compare.md  2-finding-and-comparing-periods.md  2-select-periods.md  3-browse-periods.md  3-get-structured-data.md  3-getting-structured-data-for-a-period-collection.md  3-getting-structured-data-for-an-authority.md  4-browse-authorities.md  4-create-or-edit.md  4-finding-and-using-a-uri-for-a-period-or-authority.md  5-creating-a-local-database.md  5-get-structured-data.md  6-contribute.md  6-create-or-edit.md  6-sharing-a-local-database.md  7-contribute.md  index.html
images/: logo.idraw
index-sections/: 1-what.md  2-who.md  3-more.md
index-sections-en/: 1-what.md  2-who.md  3-more.md
index-sections-es/: 1-what.md  2-who.md  3-more.md
(+25 files in other folders)
