name:               periodo-github-io
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , pandoc == 1.16.*
                  , parsec == 3.1.*
                  , hakyll == 4.7.*
  ghc-options:      -threaded
  default-language: Haskell2010
