name:               periodo-website
version:            1.0.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , pandoc == 2.9.*
                  , parsec == 3.1.*
                  , hakyll == 4.13.*
                  , text == 1.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
